# LoZim

./: CMakeLists.txt  README.md  install.sh  lozim.cpp  lozim.h  lozim.json  runnerexample.cpp  runnerexample.h  runnerexample.json
src/: ZimArchive.cpp  ZimArchive.h  lozim.cpp  lozim.h  lozim.json  lozim_config.cpp  lozim_config.h
